--- a/login.html
+++ b/login.html
@@ -25,18 +25,10 @@
       <div class="badge">For a friend</div>
       <p class="muted">Enter your secretname to continue.</p>
 
+      <!-- ✅ No password field anymore -->
       <form id="loginForm" class="stack" autocomplete="off">
-        <label class="label" for="pass">Passcode</label>
-
-        <div class="field-row">
-          <input id="pass" class="input" type="password" placeholder="••••••" required />
-          <button id="togglePass" class="btn ghost" type="button" aria-label="Show passcode">Show</button>
-        </div>
-
         <button class="btn primary" type="submit">Enter</button>
-        <p id="msg" class="error" aria-live="polite"></p>
       </form>
-     
 
     </section>
   </main>
